--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,20 +54,20 @@ services:
       - './dnscrypt-config:/config'
     restart: unless-stopped
 
+      #networks:
+  #pihole:
+  #   external: true
+  #   name: pihole-stubby_pihole
+
 networks:
   pihole:
-     external: true
-     name: pihole-stubby_pihole
-
-      #networks:
-      #  pihole:
-      #    driver: bridge
-      #    ipam:
-      #      config:
-      #        - subnet: 172.28.0.0/16
-      #          gateway: 172.28.0.1
-      #    driver_opts:
-      #      com.docker.network.bridge.name: "pihole"
-      #      com.docker.network.enable_icc: "true"
+     driver: bridge
+     ipam:
+       config:
+         - subnet: 172.29.0.0/16
+           gateway: 172.29.0.1
+     driver_opts:
+       com.docker.network.bridge.name: "crypt-pihole"
+       com.docker.network.enable_icc: "true"
 
 
